# algorithm

./: .gitignore  Cargo.toml  README.md  factorial.cpp  main  main.cpp  string_repeat_cycle.cpp  telphone1002.cpp
compiler/lex/: demo3.l  demo3.y  demo4  lex.yy.c  y.tab.c
concurrency/: philosopher.cpp  philosopherv0.cpp  philosopherv1.cpp
go/: persontest.go
go/data/: brtree.go  node.go  tree.go
kotlin/: test.kt
network/block-io/: client.cpp  server-aio  server-aio.cpp  server-nio.cpp  server-threads.cpp  server.cpp
network/io/: client  select-server  server  server-nio  server-select.cpp  thread-server
network/poll/: server.c
network/select/: client.c  server.c
poj/: digital_root_1013.cpp  elevator_1008.cpp  factorial.cpp  let_the_balloon_rise_1004.cpp  mouse_trade_1009.cpp  mulit_thread_reverse.rs  number_squence_1005.cpp  quoite_design_1007.cpp  random_generator_1014.cpp  star_ship_trooper_1011.cpp  string_repeat_cycle.cpp  take_mokey_dp.cpp  telphone1002.cpp  tempter_bone_1010.cpp  tick_and_tick_1006.cpp
poj/binary-tree/: readme.txt
poj/insert_sort/: data_generator.kt
poj/sort/: data_generator.kt  kotlin.kt  rust  rust.rs  version_cpp.cpp
rust/: helloword.rs
rust/app/: Cargo.toml
rust/demo_macro/: Cargo.toml
rust/demo_strait/: Cargo.toml
rust/enum_project/: Cargo.toml
rust/guess_game/: Cargo.toml
rust/list/: Cargo.toml
sort/: heap_sort.cpp  insert_sort.cpp  merge_sort.cpp  out.txt  quick_sort.cpp  shell_sort.cpp
tools/: AVLTree.cpp  AVLTree.h  BRTree.cpp  BRTree.h  Integer.cpp  Integer.h
tree/: binary_search_tree.cpp
(+50 files in other folders)
